[project]
name = "bulwark"
version = "0.2.0"
description = "A lightweight file encryption program"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=49.0.0",
    "pynacl>=1.6.2",
]

[tool.ruff]
line-length = 150

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
