[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thrasher"
version = "0.2.0"
description = "A lightweight file encryption program"
readme = "README.md"
license = {file = LICENSE}
authors = [{name = "Andrew Yoo"}]
requires-python = ">=3.12"
dependencies = [
    "cryptography>=49.0.0",
    "pynacl>=1.6.2",
]

[project.scripts]
thrasher = "thrasher.cli:main"

[project.urls]
repository = "https://github.com/andrew-yoo/Thrasher"

[tool.ruff]
line-length = 150

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
